fix test and format the code